--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-up" data-aos-delay="150">
-      <h1>Learn. Make. Race. halaaa</h1>
+      <h1>Learn. Make. Race.</h1>
       <h2>We are team of talented designers making websites with Bootstrap</h2>
       <div class="d-flex">
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
